@@ -31,6 +31,9 @@ ECL 1.0:
    a patch by Lars Brinkhoff). Still missing compiler support for unboxed
    long double types.
 
+ - TIME outputs information about consed bytes, but only when using the
+   Boehm-Weiser garbage collector which is shipped with ECL.
+
 * Bugs fixed:
 
  - STREAMP signals an error for Gray streams.
